# MTCH

./: .gitignore  README.md  _explore_ppr_khop_subgraph.ipynb  _gen_benchmark_analysis.py  _gen_benchmark_runner.py  _gen_benchmark_runner_planetoid.py  _gen_learnable_ppr_planetoid.py  _gen_notebook.py  benchmark_analysis.ipynb  benchmark_runner.ipynb  benchmark_runner_planetoid.ipynb  example_benchmark.py  example_improved_training.py  learnable_ppr.ipynb  learnable_ppr_planetoid.ipynb  pyproject.toml  requirements.txt  run_learnable_ppr.py  test.ipynb  test_batch_size_speedup.py  test_preprocessed_lookup.py
results/benchmark/: comparison_table.csv  full_results.json  summary_report.txt
results/benchmark/FB15K237/: experiment_log.txt
results/benchmark/FB15K237/GAT/: config.json  metrics.json  results_summary.txt
results/benchmark/FB15K237/GCN/: config.json  metrics.json  results_summary.txt
results/benchmark/FB15K237/SAGE/: config.json  metrics.json  results_summary.txt
results/benchmark/NELL-995/: experiment_log.txt
results/benchmark/NELL-995/GAT/: config.json  metrics.json  results_summary.txt
results/benchmark/NELL-995/GCN/: config.json  metrics.json  results_summary.txt
results/benchmark/NELL-995/SAGE/: config.json  metrics.json  results_summary.txt
results/benchmark/WN18RR/: experiment_log.txt
results/benchmark/WN18RR/GAT/: config.json  metrics.json  results_summary.txt
results/benchmark/WN18RR/GCN/: config.json  (+2 more)
scripts/: compare_all_methods.py  diagnose_selector.py  export_topology_clusters.py  rerun_pubmed_gat_k2.py  run_baselines.py  run_lppr.py  verify_benchmark_artifacts.py  verify_ppr_arrays.py
subgrapher/: data_utils.py  datasets.py  graph_sampler.py  ppagerank.py
subgrapher/benchmark/: __init__.py  data_prep.py  evaluator.py  models.py  run_benchmark.py  run_full_benchmark.py  test_benchmark_imports.py  trainer.py
subgrapher/benchmark_khop/: __init__.py  evaluator.py  khop_extractor.py  run_khop_benchmark.py  trainer.py  trainer_batched.py
subgrapher/benchmark_learnable_ppr/: __init__.py  artifacts.py  autolink_ppr.py  evaluator.py  finetuner.py  multi_scale_ppr.py  option_a_extractor.py  option_a_model.py  option_a_searcher.py  run_learnable_ppr_benchmark.py  run_option_a_benchmark.py  search_net.py  searcher.py
subgrapher/benchmark_ppr/: __init__.py  evaluator.py  graph_classifier.py  ppr_extractor.py  run_ppr_benchmark.py  trainer.py  trainer_batched.py  trainer_lcilp.py
subgrapher/subgraph/: __init__.py  differentiable_ppr_selector.py  example_usage.py  extractor.py  meta_trainer.py  pipeline.py  ppr_computer.py  results_manager.py  run_subgraph_benchmark.py
subgrapher/utils/: drnl.py  khop_preprocessor.py  loader.py  local_ppr.py  models.py  ppr_preprocessor.py  ppr_scorer.py  subgraph_csr.py  subgraph_trainer.py
(+11 files in other folders)
