[project]
name = "mtch"
version = "0.1.0"
description = "A Python package for graph subgraphing designed for link prediction"
authors = [
    {name = "Nathas Sung"}
]
readme = "README.md"
requires-python = ">=3.14, <3.15"
dependencies = [
    "matplotlib (>=3.10.7,<4.0.0)",
    "networkx (>=3.5,<4.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "lmdb (>=1.7.5,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "torch (>=2.9.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu126"
priority = "explicit"


[tool.poetry.dependencies]
torch = {source = "pytorch-gpu"}
