[project]
name = "mtch"
version = "0.1.0"
description = "A Python package for graph subgraphing designed for link prediction"
authors = [
    {name = "Nathas Sung"}
]
readme = "README.md"
requires-python = ">=3.13, <3.14"
dependencies = [
    "matplotlib (>=3.10.7,<4.0.0)",
    "networkx (>=3.5,<4.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "lmdb (>=1.7.5,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "torch (>=2.8.0,<2.9.0)",
    "torch-geometric (>=2.5.0)",
    "pyg-lib",
    "torch-scatter",
    "torch-sparse",
    "ogb (>=1.3.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu129"
priority = "explicit"

[[tool.poetry.source]]
name = "pyG-gpu"
url = "https://data.pyg.org/whl/torch-2.8.0+cu129.html"
priority = "explicit"

[tool.poetry.dependencies]
torch = {source = "pytorch-gpu"}
pyg-lib = {source = "pyG-gpu"}
torch_cluster = {source = "pyG-gpu"}
torch_scatter = {source = "pyG-gpu"}
torch_sparse = {source = "pyG-gpu"}
torch_spline_conv = {source = "pyG-gpu"}
